@@ -1,3 +1,10 @@
+Fri Jul 21 21:12:43 PDT 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/userlist-gui.c:
+	  - Make the userlist positioning function a little more sane, so that
+	    it doesn't pop up in random places when using the keyboard.
+	    (#347071)
+
 Fri Jul 21 17:52:18 PDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* po/pt_BR.po:
